Fix Externals.cfg and README_physics to reflect using wrf_devel branch

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -2,7 +2,7 @@
 schema_version = 1.0.0
 
 [ccpp-framework]
-tag = ccpp-frame003
+branch = wrf_devel
 protocol = git
 repo_url = https://github.com/davegill/ccpp-framework
 required = True
